tests/baselines/reference/intendedTypeFromJsDoc_noImplicitAny.errors.txt
/a.js(4,12): error TS1023: An index signature parameter type must be 'string' or 'number'.
/a.js(7,12): error TS2314: Generic type 'Array<T>' requires 1 type argument(s).


==== /a.js (2 errors) ====
    /**
     * @param {Object<string, boolean>} a
     * @param {Object<number, boolean>} b
     * @param {Object<boolean, boolean>} c
               ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
     * @param {Object} d
     * @param {object} e
     * @param {Array} f
               ~~~~~
!!! error TS2314: Generic type 'Array<T>' requires 1 type argument(s).
     */
    function f(a, b, c, d, e, f) {}
    